Bugfix artist feedback page

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_artist.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_artist.html.twig
@@ -15,100 +15,56 @@
                 <i class="star-icon unfilled"></i>
             </div>
             <div class="rating-rate">
-                <span>3.0/5.0 (16 votes)</span>
+                <span>{{ rating.averageRating | round}}/5 ({{ feedbacks | length }} votes)</span>
             </div>
+            {% if feedbacks | length < 5 %}
             <div class="rating-reach">
                 <div class="custom-checkbox">
-                    <input id="rating-accept-appear" name="package-check" value="" type="checkbox">
+                    <input id="rating-accept-appear" name="package-check" value="" checked="{{ app.user.profile.showFeedbacks ? "checked":''}}" type="checkbox">
                     <label for="rating-accept-appear"></label>
                 </div>
                 <span>Until you reach 5 feedbacks, you can decide if they should appear on your profile or not. Simply tick this box if you want to hide them</span>
             </div>
+            {% endif %}
         </div>
 
         <div class="row">
-            <span class="feedback-list-title">6 Feedbacks</span>
+            <span class="feedback-list-title">
+                {{ feedbacks|length }}
+                {% if feedbacks|length <= 1 %}
+                    Feedback
+                {% else %}
+                    Feedbacks
+                {% endif %}
+             </span>
         </div>
 
         <div class="row">
             <hr>
         </div>
-
+        {% for feedback in feedbacks %}
         <div class="row artist-feedback">
             <div class="avatar">
-                <img src="/assets/images/Avatar_profile.jpg">
+                <img src="/assets/images/noAvatar.png">
             </div>
             <div class="info">
-                <div><i>Good Client</i></div>
+                <div><i>{{ feedback.event.user.firstname }} {{ feedback.event.user.lastname }}</i></div>
                 <div>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon unfilled"></i>
-                    <i class="star-icon unfilled"></i>
+                    {% for i in 1..feedback.rating %}
+                        <i class="star-icon filled"></i>
+                    {% endfor %}
+                    {% if  5-feedback.rating > 0  %}
+                        {% for i in 1..(5-feedback.rating) %}
+                            <i class="star-icon unfilled"></i>
+                        {% endfor %}
+                    {% endif %}
                 </div>
-                <div class="date"><i>25 December 2016</i></div>
+                <div class="date"><i>{{ feedback.createdAt | date("d F Y") }}</i></div>
             </div>
             <div class="comment">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                <p>{{ feedback.feedback }}</p>
             </div>
         </div>
-        <div class="row artist-feedback">
-            <div class="avatar">
-                <img src="/assets/images/Avatar_profile.jpg">
-            </div>
-            <div class="info">
-                <div><i>Good Client</i></div>
-                <div>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon unfilled"></i>
-                    <i class="star-icon unfilled"></i>
-                </div>
-                <div class="date"><i>25 December 2016</i></div>
-            </div>
-            <div class="comment">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-            </div>
-        </div>
-        <div class="row artist-feedback">
-            <div class="avatar">
-                <img src="/assets/images/Avatar_profile.jpg">
-            </div>
-            <div class="info">
-                <div><i>Good Client</i></div>
-                <div>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon unfilled"></i>
-                    <i class="star-icon unfilled"></i>
-                </div>
-                <div class="date"><i>25 December 2016</i></div>
-            </div>
-            <div class="comment">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-            </div>
-        </div>
-        <div class="row artist-feedback">
-            <div class="avatar">
-                <img src="/assets/images/Avatar_profile.jpg">
-            </div>
-            <div class="info">
-                <div><i>Good Client</i></div>
-                <div>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon filled"></i>
-                    <i class="star-icon unfilled"></i>
-                    <i class="star-icon unfilled"></i>
-                </div>
-                <div class="date"><i>25 December 2016</i></div>
-            </div>
-            <div class="comment">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </main>
