--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -9,7 +9,7 @@
 {% include 'ActedLegalDocsBundle:Profile:ordersSection.html.twig' %}
     </section>
 {% include 'ActedLegalDocsBundle:Profile:biographySection.html.twig' %}
-
+    {% if artist.user.profile.showFeedbacks and artist.feedbacks | length < 5 %}
     <section id="feedbacks" class="profile-block feedbacks">
         <div class="title">
                 <span>
@@ -25,6 +25,7 @@
 {% include 'ActedLegalDocsBundle:Profile:feedbacksSection.html.twig' %}
         </div>
     </section>
+    {% endif %}
 
 {% include 'ActedLegalDocsBundle:Profile:mediaSection.html.twig' %}
 
