--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_artist.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_artist.html.twig
@@ -7,12 +7,15 @@
         </div>
 
         <div class="row rating-wrapper">
-            <div class="rating-stars">
-                <i class="star-icon filled"></i>
-                <i class="star-icon filled"></i>
-                <i class="star-icon filled"></i>
-                <i class="star-icon unfilled"></i>
-                <i class="star-icon unfilled"></i>
+            <div>
+                {% for i in 1..rating.averageRating | round(0, 'floor')%}
+                    <i class="star-icon filled"></i>
+                {% endfor %}
+                {% if  5-rating.averageRating | round(0,'floor') > 0  %}
+                    {% for i in 1..(5-rating.averageRating) | round(0, 'ceil') %}
+                        <i class="star-icon unfilled"></i>
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="rating-rate">
                 <span>{{ rating.averageRating | round}}/5 ({{ feedbacks | length }} votes)</span>
@@ -20,7 +23,7 @@
             {% if feedbacks | length < 5 %}
             <div class="rating-reach">
                 <div class="custom-checkbox">
-                    <input id="rating-accept-appear" name="package-check" value="" checked="{{ app.user.profile.showFeedbacks ? "checked":''}}" type="checkbox">
+                    <input id="rating-accept-appear" name="package-check" value="" {% if app.user.profile.showFeedbacks is empty %} checked="checked" {% endif %} type="checkbox">
                     <label for="rating-accept-appear"></label>
                 </div>
                 <span>Until you reach 5 feedbacks, you can decide if they should appear on your profile or not. Simply tick this box if you want to hide them</span>
