hide messages before render

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
@@ -16,7 +16,7 @@
                 <option value="archived">Archived</option>
             </select>
 
-            <div class="dialogs">
+            <div class="dialogs" style="display: none;">
                 <article v-for="message in messages" v-bind:data-message-id="message.id" class="col-xs-12 dialog-section noselect" data-longtap-duration="500">
                     <div class="wrap clearfix">
                         <div v-if="!message.read_date_time" class="message-info active"></div>
