--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
@@ -1,3 +1,162 @@
+/* --- COLORS SECTION --- */
+.color-kelly { color: #6eb421; }
+
+/* --- ARTIST SECTION -- */
+.artist-selection {
+    font-family: LatoRegular;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+}
+.artist-selection .right-panel {
+    display: inline-block;
+}
+.artist-selection .artist-block .avatar img {
+    height: 74px;
+    width: 74px;
+    border-radius: 50%;
+}
+.artist-selection ul.artist-categories {
+    margin: 1px 0 4px 0;
+}
+.artist-selection ul.artist-categories li {
+    position: relative;
+    display: inline;
+    padding: 0;
+}
+.artist-selection ul.artist-categories li:nth-of-type(1) {
+    margin: 0 8px 0 0;
+}
+.artist-selection ul.artist-categories li:not(:nth-of-type(1)) {
+    padding: 0 6px 0 5px;
+    margin: 0px 2px;
+}
+.artist-selection ul.artist-categories li:not(:nth-of-type(1)):after {
+    background-color: rgba(181, 181, 181, 1);
+    border-radius: 50%;
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: -4px;
+    height: 4px;
+    width: 4px;
+    margin: -2px -2px;
+}
+.artist-selection .artist-block {
+    padding: 9px 0 24px 0;
+    border-bottom: 2px solid #e9e9e9;
+}
+.artist-selection .artist-block:nth-of-type(1) {
+    padding: 9px 0 24px 0;
+}
+.artist-selection .artist-block:nth-last-of-type(1) {
+    margin: 0 0 84px 0;
+}
+.artist-selection .artist-block .name {
+    font-family: Ubuntu;
+    font-size: 18px;
+    font-weight: 500;
+}
+.artist-selection .artist-block .avatar-block {
+    margin: 7px 12px 0 37px;
+}
+.artist-selection .artist-block .available-flag {
+    font-family: LatoBold;
+    font-size: 16px;
+    font-weight: 400;
+
+    margin: 0 0px 22px 0;
+}
+.artist-selection .artist-block .price-from {
+    margin: 0 0 29px 0;
+}
+.artist-selection .artist-block .artist-categories li {
+    font-family: LatoBold;
+    font-size: 14px;
+}
+.artist-selection .artist-block .stars {
+    margin: 0 0 0 6px;
+}
+.artist-selection .artist-block .stars .star {
+    background: url(../../assets/images/star_unfilled_feedback.png);
+    background-size: cover;
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    margin: 0 2px;
+    vertical-align: text-top;
+}
+.artist-selection .artist-block .stars .star.filled {
+    background: url(../../assets/images/star_feedback.png);
+    background-size: cover;
+}
+.artist-selection .artist-block .rate i,
+.artist-selection .artist-block .rate-count i {
+    font-style: normal;
+}
+.artist-selection .artist-block .rate-count span {
+    font-family: LucidaGrande;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    color: rgba(0, 0, 0, 0.87);
+}
+.artist-selection .artist-block .right-panel {
+    padding: 0 0 0 58px;
+}
+.artist-selection .artist-block .controls-area {
+    margin: -28px 0 0 15px;
+    padding: 0;
+}
+.artist-selection .artist-block .controls-area > button {
+    margin: 0 30px 0 0;
+}
+.artist-selection .artist-block .controls-area .border-gradient {
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.artist-selection .controls .button-gradient.follow {
+    margin: 0;
+}
+
+.artist-selection .controls .button-gradient.follow > .btn {
+    width: 130px;
+    height: 24px;
+}
+
+.artist-selection .controls button {
+    height: 26px;
+    width: 130px;
+    font-size: 14px !important;
+}
+
+
+@media screen and (max-width: 1199px) {
+    .artist-selection .artist-block .right-panel {
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 696px) {
+    .artist-selection .artist-block .avatar-block {
+        margin: 6px 30px 0 0;
+    }
+}
+
+@media screen and (max-width: 567px) {
+    .artist-selection .artist-block:nth-of-type(1) {
+        padding: 35px 0 24px 0;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    .artist-selection .artist-block .controls-area > button {
+        margin: 0;
+    }
+}
+
+/** TODO Need to remove unused styles at bottom code!!! */
+
 /*artist selection styles start*/
 .artist-selection{
     padding: 30px 0 70px;
