--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -96,7 +96,7 @@
                                             </ul>
                                         </li>
                                     {% else %}
-                                        <li class="bookings"><a href="{{  path('bookings') }}">My events
+                                        <li class="bookings"><a href="{{  path('events') }}">My events
                                             <div class="underline">
                                                 <div class="top"></div>
                                                 <div class="bottom"></div>
