add class for handling by js for events

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
@@ -13,7 +13,7 @@
     </div>
 
 </div>
-<div class="new-event">
+<div class="new-event new-client-event">
     <span class="hidden-xs hidden-sm">Add Event</span>
     <i class="fa fa-plus"></i>
 </div>
