Fixed client menu. Added styles for client and artist messages. 12/12/2016 12:56 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
@@ -129,7 +129,14 @@
     width: 130px;
     font-size: 14px !important;
 }
-
+.artist-selection .remove-artist {
+    font-family: LatoRegular;
+    font-size: 14px;
+    font-weight: 400;
+}
+.artist-selection .remove-artist i {
+    margin: 0 8px 0 0;
+}
 
 @media screen and (max-width: 1199px) {
     .artist-selection .artist-block .right-panel {
@@ -139,7 +146,7 @@
 
 @media screen and (max-width: 696px) {
     .artist-selection .artist-block .avatar-block {
-        margin: 6px 30px 0 0;
+        margin: 6px 30px 0 12px;
     }
 }
 
@@ -608,7 +615,7 @@
         float: none !important;
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .artist-selection{padding: 0 0 40px;}
     .artist-selection .container{padding: 0;}
     .detail-form.main-form{padding: 20px 15px;}
@@ -667,5 +674,61 @@
     .category-tab .artists-list .place{margin-left: -20%;}
     .category-tab .request-title-list{padding-top: 8px;}
 }
+@media (max-width: 768px) {
+    .artist-selection .artist-block .avatar-block {
+        margin: 7px 12px 0 14px;
+    }
+    .artist-selection .artist-block {
+        padding: 38px 0 24px 0;
+    }
+    .artist-selection .artist-block .avatar img {
+        width: 54px;
+        height: 54px;
+    }
+    .artist-selection .artist-block .name {
+        position: absolute;
+        top: -50px;
+        left: 75px;
+    }
+    .artist-selection .artist-block .stars {
+        margin: 0;
+        position: absolute;
+        top: -20px;
+        left: 75px;
+    }
+    .artist-selection .artist-block .rate {
+        position: absolute;
+        top: -22px;
+        left: 175px;
+    }
+    .artist-selection .artist-block .rate-count {
+        position: absolute;
+        top: -22px;
+        left: 226px;
+    }
+    .artist-selection .artist-block .right-panel {
+        position: absolute;
+        top: 0;
+        right: 16px;
+    }
+    .artist-selection .artist-block .controls-area {
+        margin: 16px 0 0 12px;
+    }
+    .artist-selection .artist-block .price-from {
+        margin: 25px 0 0 0;
+    }
+    .artist-selection .artist-block .available-flag {
+        position: absolute;
+        top: -90px;
+    }
+    .artist-selection .remove-artist {
+        position: absolute;
+        top: -50px;
+    }
+    .artist-selection .artist-block .controls-area > button {
+        margin: 0 30px 0 0;
+    }
+}
+
 /*media styles end*/
 /*artist selection styles end*/
