--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
@@ -209,13 +209,14 @@
     font-size: 15px;
     font-family: LatoRegular;
     color: rgba(0, 0, 0, 0.87);
+    display: block;
 }
 
 .user-info .time {
     font-size: 11px;
     font-family: LatoRegular;
     color: rgba(0, 0, 0, 0.67);
-    float: left;
+    display: block;
 }
 
 .message-block .message-heading {
