fix event comments

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -93,7 +93,7 @@
             <div class="row">
                 <label for="additional_info">Additional info</label>
                 <span class="additional_info_counter"><span class="current-count">0</span><span>/1000</span></span>
-                <textarea maxlength="200" v-bind:value="event." class="form-control additional_info_input enable_toggler"
+                <textarea maxlength="200" v-bind:value="event.comments" class="form-control additional_info_input enable_toggler"
                           id="additional_info" placeholder="Put your comments here"></textarea>
             </div>
         </div>
