Update a quote request modal window. 12/12/2016 3:43 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -162,7 +162,7 @@
 
                             <div class="controls">
                                 <div class="button-gradient filled">
-                                    <button class="btn" id="quoteRequsetSend">Send</button>
+                                    <button class="btn" id="quoteRequsetSend">Create an event</button>
                                 </div>
                             </div>
                         </div>
