--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
@@ -8,6 +8,7 @@
 
 .free-quote-modal .modal-content {
     border: none;
+    border-radius: 11px;
 }
 
 .free-quote-modal .modal-content .close {
@@ -36,10 +37,10 @@
 }
 
 .free-quote-modal .modal-header {
-    padding: 12px 11px;
+    padding: 3px 11px;
     background: #FF844E;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+    border-top-left-radius: 11px;
+    border-top-right-radius: 11px;
     border: none;
     color: white;
 }
@@ -55,8 +56,8 @@
 .free-quote-modal .modal-footer {
     background: white;
     text-align: initial;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 11px;
+    border-bottom-right-radius: 11px;
     padding-top: 6px;
 }
 .grey_popup_background {
@@ -99,7 +100,7 @@
     font-size: 14px;
     color: white;
     float: right;
-    padding-top: 2px;
+    padding-top: 4px;
 }
 
 .free-quote-modal.modal-registered .quote-box a{
@@ -213,7 +214,7 @@
 }
 
 .free-quote-modal .profile-categories li{
-    /*    float: left;*/
+    float: left;
     margin-right: 0;
     margin-left: 9px;
     margin-top: 5px;
@@ -291,7 +292,7 @@
     position: absolute;
     font-family: LatoRegular;
     right: 26px;
-    top: 37px;
+    top: 4px;
     font-size: 14px;
 }
 .comment_area_counter {
@@ -308,7 +309,7 @@
     outline: none;
     padding: 0;
     border-radius: 8px;
-    border: 2px solid #EEEEEE!important;
+    /*border: 2px solid #EEEEEE!important;*/
     font-size: 14px;
     padding-top: 5px;
 }
@@ -374,7 +375,7 @@
 h4.eventChooseRequest select {
     background-position: calc(100% - 14px) 9px, calc(100% - 9px) 9px, 100% 0;
     border: 0px solid transparent;
-    width: calc(100% - 140px);
+    width: calc(100% - 130px);
 }
 h4.eventChooseRequest select:active {
     background-position: calc(100% - 14px) 7px, calc(100% - 9px) 7px, 100% 0;
