fix bug and add logic for showing artist data in quote request popup

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -134,9 +134,9 @@
                             <img class="quote-profile-avatar" src="assets/images/avatar.jpg" alt="avatar"/>
 
                             <div class="quote-profile-info text-left">
-                                <h2>Diana Krall</h2>
-                                <p class="quote-profile-info__spec">Jazz Vocalist, Jazz Pianist, Song Writer</p>
-                                <p class="quote-profile-info__residence">Paris, France</p>
+                                <h2></h2>
+                                <p class="quote-profile-info__spec"></p>
+                                <p class="quote-profile-info__residence"></p>
                             </div>
                         </div>
 
