Update styles. Added google autocomplete to event details page. 12/12/2016 5:06 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
@@ -29,7 +29,7 @@
             <a href="{{ path('event_messages') }}">Messages</a>
         </li>
         <li>
-            <a href="#">Artist selection</a>
+            <a href="{{ path('artist_selection') }}">Artist selection</a>
         </li>
         <li>
             Payments
