--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -3,7 +3,7 @@
 <main class="dashboard feedback client" id="client-event-details">
     <div class="container no-pad client_event_details">
         {% include 'ActedLegalDocsBundle:Profile:client/client_menu.html.twig' %}
-        <div class="col-md-6 col-sm-6 left_column" v-bind:data-event-id="event.id" style="display: none;">
+        <form class="col-md-6 col-sm-6 left_column" name="event-details" v-bind:data-event-id="event.id" style="display: none;">
             <div class="row">
                 <div class="printer_icon">
                     <p>
@@ -72,7 +72,7 @@
             <div class="row">
                 <label for="event_address">Address</label>
                 <input type="text" v-model.lazy.trim="event.location" class="form-control enable_toggler"
-                       v-bind:value="event.location" id="event_address" placeholder="Type the address here...">
+                       v-bind:value="event.location" id="event_address" name="location" placeholder="Type the address here...">
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 no-pad-left">
@@ -96,7 +96,7 @@
                 <textarea maxlength="450" v-model.lazy.trim="event.comments" v-bind:value="event.comments" class="form-control additional_info_input enable_toggler"
                           id="additional_info" placeholder="Put your comments here"></textarea>
             </div>
-        </div>
+        </form>
         <div class="col-md-6 col-sm-6 right_column" style="visibility: hidden;">
             <div class="printer_icon">
                 <p>
