--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
@@ -113,3 +113,16 @@
     background-image: -webkit-linear-gradient(left,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%);
     background-image: linear-gradient(to right,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%);
 }
+.custom-checkbox label:after {
+    /*height: 8px;*/
+    /*width: 10px;*/
+    /*margin: 6px 5px;*/
+    margin: 6px 5px;
+    left: 3px;
+    top: -2px;
+    width: 5px;
+    height: 9px;
+    border: solid rgb(255,173,108);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
