--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -66,7 +66,7 @@
                 <div class="col-lg-6 col-md-6 no-pad-right">
                     <label for="event-country">Country</label>
                     <input disabled type="text" class="form-control" id="event-country" placeholder="United Kingdom"
-                           name="country">
+                           name="country" value="United Kingdom">
                 </div>
             </div>
             <div class="row">
