--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
@@ -23,8 +23,9 @@
                 <option value="archived">Archived</option>
             </select>
 
-            <div class="dialogs" style="display: none;">
-                <article v-for="message in messages" v-bind:data-message-id="message.id" class="col-xs-12 dialog-section noselect" data-longtap-duration="500">
+            <div class="dialogs" style="display: none;" >
+                <div class="message-and-feedback" v-for="message in messages" v-bind:data-message-id="message.id">
+                <article class="col-xs-12 dialog-section noselect" data-longtap-duration="500">
                     <div class="wrap clearfix">
                         <div class="message-info" :class="!message.read_date_time ? 'active' : ''"></div>
                         <div class="avatar">
@@ -33,7 +34,7 @@
                         </div>
                         <div class="user-info">
                             <span class="user-name">${message.sender_user.firstname} ${message.sender_user.lastname}</span>
-                            <span class="time">12.34 pm</span>
+                            <span class="time">${message.send_date_time}</span>
                         </div>
                         <div class="message-block">
                             <div class="col-lg-9 col-sm-9 text-block">
@@ -75,6 +76,29 @@
                         </li>
                     </div>
                 </article>
+                    <article v-if="feedbacks[message.chat_room.event.id]" class="col-xs-12 dialog-rating-container noselect" data-longtap-duration="500">
+                    <div class="wrap clearfix">
+                        <div class="message-info">
+                            <span class="pull-right">${feedbacks[message.chat_room.event.id].created_at}</span>
+                            <span>Congratulations! You have received new rating!</span>
+                        </div>
+                        <div class="avatar">
+                            <img v-if="feedbacks[message.chat_room.event.id].event.user.avatar" v-bind:src="feedbacks[message.chat_room.event.id].event.user.avatar" alt=""/>
+                            <img v-else src="/assets/images/noAvatar.png" alt=""/>
+                        </div>
+                        <div class="user-info">
+                            <span class="user-name"></span>
+                        </div>
+                        <div class="rating">
+                            <i v-for="i in feedbacks[message.chat_room.event.id].rating" class="star-icon filled"></i>
+                            <i v-for="i in 5-feedbacks[message.chat_room.event.id].rating" class="star-icon unfilled"></i>
+                        </div>
+                        <div class="message-block">
+                            <p>${feedbacks[message.chat_room.event.id].feedback} </p>
+                        </div>
+                    </div>
+                </article>
+                </div>
             </div>
 
             {#<div class="dialogs">
